// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuLink renders correctly with hidden nodes 1`] = `
<div
  data-testid="menulink"
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "vecy55",
          "next": undefined,
          "styles": "
              flex-grow: 1;
            ",
        }
      }
      onClick={[Function]}
    >
      basic
    </div>
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "eheuf0",
          "next": undefined,
          "styles": "
                padding: 0px 30px;
              ",
        }
      }
      data-testid="toggle-button"
      onClick={[Function]}
    >
      <span>
        +
      </span>
    </div>
  </div>
</div>
`;

exports[`MenuLink renders correctly without hidden nodes 1`] = `
<div
  data-testid="menulink"
>
  <div
    css={
      Object {
        "map": undefined,
        "name": "xmrkwo",
        "next": undefined,
        "styles": "
            
    padding: 15px 0px;
  ;
            display: flex;
            padding-left: 20px;
            padding-right: 20px;
          ",
      }
    }
  >
    <div
      className="Menu-major-item-Style"
      css={
        Object {
          "map": undefined,
          "name": "vecy55",
          "next": undefined,
          "styles": "
              flex-grow: 1;
            ",
        }
      }
      onClick={[Function]}
    >
      basic
    </div>
  </div>
</div>
`;
